# RGUReloadedGetValueTest

./: CMakeLists.txt
include/: getValueAVXMatrixMultiplication.h  getValueBooleanMatrixMultiplication.h  getValueStandardMatrixMultiplication.h  getValueUnrolledMatrixMultiplication.h
src/: getValueAVXMatrixMultiplication.cpp  getValueBooleanMatrixMultiplication.cpp  getValueStandardMatrixMultiplication.cpp  getValueUnrolledMatrixMultiplication.cpp  main.cpp
